// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transpiles JavaScript expressions 1`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
1 + 2
)
}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles JavaScript expressions 2`] = `
{
  "autodisplay": true,
  "body": "(x,y) => {
return (
x + y
)
}",
  "inputs": [
    "x",
    "y",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles JavaScript expressions 3`] = `
{
  "autodisplay": true,
  "body": "async (z) => {
return (
await z
)
}",
  "inputs": [
    "z",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles JavaScript expressions 4`] = `
{
  "autodisplay": false,
  "body": "(display) => {
return (
display(1), display(2)
)
}",
  "inputs": [
    "display",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles JavaScript programs 1`] = `
{
  "autodisplay": false,
  "body": "() => {
const x = 1, y = 2;
return {x,y};
}",
  "inputs": [],
  "output": undefined,
  "outputs": [
    "x",
    "y",
  ],
}
`;

exports[`transpiles JavaScript programs 2`] = `
{
  "autodisplay": false,
  "body": "(x,y) => {
x + y;
}",
  "inputs": [
    "x",
    "y",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles JavaScript programs 3`] = `
{
  "autodisplay": false,
  "body": "async (z) => {
await z;
}",
  "inputs": [
    "z",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles Observable JavaScript imports 1`] = `
{
  "autodisplay": false,
  "body": "async (__ojs_runtime,__ojs_observer) => {
const {figure, rotation, viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const observers = {};
  const module = __ojs_runtime.module(_.default);
  const main = __ojs_runtime.module();
  if (!module.defines("figure")) throw new SyntaxError(\`export 'figure' not found\`);
  main.variable(observers.figure = __ojs_observer()).import("figure", module);
  if (!module.defines("rotation")) throw new SyntaxError(\`export 'rotation' not found\`);
  main.variable(observers.rotation = __ojs_observer()).import("rotation", module);
  if (!module.defines("viewof rotation")) throw new SyntaxError(\`export 'viewof rotation' not found\`);
  main.variable(observers.viewof$rotation = __ojs_observer()).import("viewof rotation", module);
  return observers;
}));

return {figure,rotation,viewof$rotation};
}",
  "inputs": [
    "__ojs_runtime",
    "__ojs_observer",
  ],
  "output": undefined,
  "outputs": [
    "figure",
    "rotation",
    "viewof$rotation",
  ],
}
`;

exports[`transpiles Observable JavaScript imports 2`] = `
{
  "autodisplay": false,
  "body": "async (__ojs_runtime,__ojs_observer) => {
const {figure, rotation: rot, viewof$rotation: viewof$rot} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const observers = {};
  const module = __ojs_runtime.module(_.default);
  const main = __ojs_runtime.module();
  if (!module.defines("figure")) throw new SyntaxError(\`export 'figure' not found\`);
  main.variable(observers.figure = __ojs_observer()).import("figure", module);
  if (!module.defines("rotation")) throw new SyntaxError(\`export 'rotation' not found\`);
  main.variable(observers.rotation = __ojs_observer()).import("rotation", module);
  if (!module.defines("viewof rotation")) throw new SyntaxError(\`export 'viewof rotation' not found\`);
  main.variable(observers.viewof$rotation = __ojs_observer()).import("viewof rotation", module);
  return observers;
}));

return {figure,rot,viewof$rot};
}",
  "inputs": [
    "__ojs_runtime",
    "__ojs_observer",
  ],
  "output": undefined,
  "outputs": [
    "figure",
    "rot",
    "viewof$rot",
  ],
}
`;

exports[`transpiles dynamic npm: imports 1`] = `
{
  "autodisplay": false,
  "body": "async () => {
const d3 = await import("https://cdn.jsdelivr.net/npm/d3/+esm");
return {d3};
}",
  "inputs": [],
  "output": undefined,
  "outputs": [
    "d3",
  ],
}
`;

exports[`transpiles empty cells 1`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles empty cells 2`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles empty cells 3`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles empty cells 4`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles empty cells 5`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles import.meta.resolve 1`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
"https://cdn.jsdelivr.net/npm/d3/+esm"
)
}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles import.meta.resolve 2`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
new URL("./test", document.baseURI).href
)
}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles import.meta.resolve 3`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
"./test"
)
}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles node cells 1`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node $\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles node cells 2`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\$\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles node cells 3`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\\\\\$\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles node cells 4`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node $\\\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles node cells 5`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\$\\\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles static imports with {type: 'observable'} 1`] = `
{
  "autodisplay": false,
  "body": "async (__ojs_runtime,__ojs_observer) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber.js?v=4").then((_) => {
  const observers = {};
  const module = __ojs_runtime.module(_.default);
  const main = __ojs_runtime.module();
  if (!module.defines("Scrubber")) throw new SyntaxError(\`export 'Scrubber' not found\`);
  main.variable(observers.Scrubber = __ojs_observer()).import("Scrubber", module);
  return observers;
}));

return {Scrubber};
}",
  "inputs": [
    "__ojs_runtime",
    "__ojs_observer",
  ],
  "output": undefined,
  "outputs": [
    "Scrubber",
  ],
}
`;

exports[`transpiles static imports with {type: 'observable'} 2`] = `
{
  "autodisplay": false,
  "body": "async (__ojs_runtime,__ojs_observer) => {
const {viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const observers = {};
  const module = __ojs_runtime.module(_.default);
  const main = __ojs_runtime.module();
  if (!module.defines("viewof rotation")) throw new SyntaxError(\`export 'viewof rotation' not found\`);
  main.variable(observers.viewof$rotation = __ojs_observer()).import("viewof rotation", module);
  return observers;
}));

return {viewof$rotation};
}",
  "inputs": [
    "__ojs_runtime",
    "__ojs_observer",
  ],
  "output": undefined,
  "outputs": [
    "viewof$rotation",
  ],
}
`;

exports[`transpiles static npm: imports 1`] = `
{
  "autodisplay": false,
  "body": "async () => {
const d3 = await import("https://cdn.jsdelivr.net/npm/d3/+esm");

return {d3};
}",
  "inputs": [],
  "output": undefined,
  "outputs": [
    "d3",
  ],
}
`;

exports[`transpiles static npm: imports 2`] = `
{
  "autodisplay": false,
  "body": "async () => {
const {default: _} = await import("https://cdn.jsdelivr.net/npm/lodash/+esm").then((module) => {
  if (!("default" in module)) throw new SyntaxError(\`export 'default' not found\`);
  return module;
});

return {_};
}",
  "inputs": [],
  "output": undefined,
  "outputs": [
    "_",
  ],
}
`;

exports[`transpiles static npm: imports 3`] = `
{
  "autodisplay": false,
  "body": "async () => {
const [{}, {}] = await Promise.all([import("https://cdn.jsdelivr.net/npm/d3/+esm"), import("https://cdn.jsdelivr.net/npm/isoformat/+esm")]);

}",
  "inputs": [],
  "output": undefined,
  "outputs": [],
}
`;

exports[`transpiles static observable: imports 1`] = `
{
  "autodisplay": false,
  "body": "async (__ojs_runtime,__ojs_observer) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber.js?v=4").then((_) => {
  const observers = {};
  const module = __ojs_runtime.module(_.default);
  const main = __ojs_runtime.module();
  if (!module.defines("Scrubber")) throw new SyntaxError(\`export 'Scrubber' not found\`);
  main.variable(observers.Scrubber = __ojs_observer()).import("Scrubber", module);
  return observers;
}));

return {Scrubber};
}",
  "inputs": [
    "__ojs_runtime",
    "__ojs_observer",
  ],
  "output": undefined,
  "outputs": [
    "Scrubber",
  ],
}
`;

exports[`transpiles static observable: imports 2`] = `
{
  "autodisplay": false,
  "body": "async (__ojs_runtime,__ojs_observer) => {
const {viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4").then((_) => {
  const observers = {};
  const module = __ojs_runtime.module(_.default);
  const main = __ojs_runtime.module();
  if (!module.defines("viewof rotation")) throw new SyntaxError(\`export 'viewof rotation' not found\`);
  main.variable(observers.viewof$rotation = __ojs_observer()).import("viewof rotation", module);
  return observers;
}));

return {viewof$rotation};
}",
  "inputs": [
    "__ojs_runtime",
    "__ojs_observer",
  ],
  "output": undefined,
  "outputs": [
    "viewof$rotation",
  ],
}
`;
